maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: ')' expected but ',' found.
for (x<-1 to xmax, y<-1 to Ymax)
                 ^JediEscaper:6: error: illegal start of simple expression
}
^