maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
val Xmax=getMondeLargeur-1
val Ymax=getMondeHauteur-1
for (x<-1 to xmax, y<-1 to Ymax)
}
